--- a/INDEX.HTM
+++ b/INDEX.HTM
@@ -9,7 +9,7 @@
 <body>
 	<div></div>
 	<script>
-		[...document.querySelectorAll("div")].at(-1).append(...[
+		document.querySelector("div").append(...[
 			"A & Z",
 			"AA Meeting",
 			"Abide",
