--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,12 @@
 		line-height:calc(1em + 8px);
 		text-align:justify
 	}
+	body{
+		margin:16
+	}
+	div{
+		padding:4 8
+	}
 	a{
 		text-decoration:none
 	}
@@ -461,6 +467,5 @@
 		})]).flat())
 		document.querySelector("script").remove()
 	</script>
-	<hr>
 	<div>Astrix | Burn in Noise | Dogzilla</div>
 </body>
