--- a/index.htm
+++ b/index.htm
@@ -1,16 +1,16 @@
 <meta content=width=device-width name=viewport>
 <style>
 	:root{
-		font-family:arial,sans-serif;
+		font-family:sans-serif;
 		font-kerning:none;
 		line-height:calc(1em + 8px);
 		text-align:justify
 	}
 	body{
-		margin:16
+		margin:12
 	}
 	div{
-		padding:4 8
+		padding:8 12
 	}
 	a{
 		text-decoration:none
@@ -462,7 +462,6 @@
 		].map(($,A)=>[document.createTextNode(A?" | ":""),Object.assign(document.createElement("a"),{
 			href:"https://www.beatport.com/search?q="+encodeURIComponent($).replaceAll("%20","+"),
 			innerText:$,
-			lang:"zh",
 			target:"_blank"
 		})]).flat())
 		document.querySelector("script").remove()
