--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <meta content=width=device-width name=viewport>
 <style>
 	:root{
-		font-family:sans-serif;
+		font-family:arial,sans-serif;
 		font-kerning:none;
 		line-height:calc(1em + 8px);
 		text-align:justify
