--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
 		font-family:arial,sans-serif;
 		font-kerning:none;
 		line-height:calc(1em + 8px);
-		text-align:justify
+		text-align:justify;
+		-webkit-text-size-adjust:none
 	}
 	body{
 		margin:12
