--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,6 @@
 			"Ashley Smith",
 			"Asteroid",
 			"Astrofegs",
-			"Avalon & Outsiders",
 			"Awii",
 			"Axel Walters",
 			"Ayda",
@@ -319,6 +318,7 @@
 			"onTune",
 			"Opt-In",
 			"Oussama Mlaouhia",
+			"Outsiders",
 			"Paipy",
 			"Pandora",
 			"Para X",
