--- a/index.htm
+++ b/index.htm
@@ -24,458 +24,454 @@
 	}
 </style>
 <title>Trance Artists</title>
-<body>
-	<h1>Trance Artists</h1>
-	<div>
-	</div>
-	<script>
-		document.querySelector("div").append(...[
-			"A & Z",
-			"AA Meeting",
-			"Abide",
-			"Abstract Vision",
-			"abSTrakt",
-			"Activa",
-			"Adam Ellis",
-			"Adam Morris",
-			"Adam Nickey",
-			"Adam Taylor",
-			"Adip Kiyoi",
-			"ADM",
-			"Ahmed Romel",
-			"Aimoon",
-			"Airdream",
-			"Aki Harunari",
-			"Alan Wyse",
-			"Alatheia",
-			"Alessandra Roncone",
-			"Alex Di Stefano",
-			"Alex M.O.R.P.H.",
-			"Alex Nomak",
-			"Alex Wright",
-			"AlexMo",
-			"Allan Berndtz",
-			"Allen & Envy",
-			"Allen Watts",
-			"Aly & Fila",
-			"Amir Hussain",
-			"Amos & Riot Night (Riot Night)",
-			"Andre Visior",
-			"Andres Sanchez",
-			"Andrew Manning",
-			"Angry Man",
-			"Araya",
-			"Architect",
-			"Arctic Moon",
-			"Arctic Ocean",
-			"A.R.D.I.",
-			"Ariams",
-			"Arja",
-			"Armin van Buuren",
-			"Arron Jones",
-			"Artifi",
-			"Ashley Smith",
-			"Asteroid",
-			"Astrofegs",
-			"Awii",
-			"Axel Walters",
-			"Ayda",
-			"Barely Sane",
-			"Ben Gold",
-			"Ben Nicky",
-			"Billy Gillies",
-			"Binary Ensemble",
-			"Bjorn Akesson",
-			"Black XS",
-			"Blashear",
-			"BluSkay",
-			"Bogdan Vix",
-			"BOND",
-			"Borealnight",
-			"Boski",
-			"Brainiac",
-			"Brian Flinn",
-			"Bryan Kearney",
-			"Calvin O'Commor",
-			"Cartel",
-			"Casey Rasch",
-			"Charlie Walker",
-			"Chris Connolly",
-			"Chris Element",
-			"Chris Lyf",
-			"Chris Metcalfe",
-			"Chris Schweizer",
-			"Christopher Corrigan",
-			"Christopher Lawrence",
-			"Ciaran McAuley",
-			"Claas Inc.",
-			"ClanEver",
-			"Claudiu Adam",
-			"CO1N",
-			"Codeswitch",
-			"Coke Montilla",
-			"Cold Blue",
-			"Cold Face",
-			"Conor Holohan",
-			"Corrado Baggieri",
-			"Costa Pantazis",
-			"Craig Connelly",
-			"Criostasis",
-			"Crisy",
-			"Crowd+Ctrl",
-			"Crubbixz",
-			"Curtis & Barnett",
-			"cYsmix",
-			"Dalmoori",
-			"Dan Kelly",
-			"Dan Stone",
-			"Daniel Skyver",
-			"Danny Eaton",
-			"Dark Fusion",
-			"Darkboy",
-			"Darkingz",
-			"Darren Porter",
-			"Dave Deen",
-			"Davey Asprey",
-			"David Elston",
-			"David Forbes",
-			"David Nimmo",
-			"David Rust",
-			"Db Mokk",
-			"Dennis Pedersen",
-			"Derek Ryan",
-			"DH",
-			"Dicken",
-			"DIM3NSION",
-			"Dima Krasnik",
-			"Discordia",
-			"DJ Frost",
-			"DJ T.H.",
-			"DJ Tranceair",
-			"Dmitriy Kuznetsov",
-			"Dominant Space",
-			"DreamLife",
-			"Driftmoon",
-			"Dstm",
-			"Dustin Husain",
-			"Ed Lynam",
-			"Eddie Bitar",
-			"Edgar Tapia",
-			"Elucidus",
-			"Emanuele Congeddu",
-			"Emiliano Pavon",
-			"Emj",
-			"Enrique Calvetty",
-			"Estigma",
-			"EverLight",
-			"Exis",
-			"Existence",
-			"Exolight",
-			"Exouler",
-			"Ezequiel Lovera",
-			"Facade",
-			"Factor B",
-			"Faders",
-			"Fady & Mina",
-			"Farnoodex",
-			"Faruk Sabanci",
-			"Fergie & Sadrian",
-			"Ferry Tayle",
-			"F.G. Noise",
-			"Fisical Project",
-			"Flynn",
-			"Flynn & Denton",
-			"Forza:Duo",
-			"Francis Way",
-			"Frank Waanders",
-			"Frank Watson",
-			"Fredge",
-			"Fright Nite",
-			"Gary Maguire",
-			"Gayax",
-			"George Boston",
-			"Giuseppe Ottaviani",
-			"Greg Downey",
-			"Greg Oakland",
-			"Haikal Ahmad",
-			"Haris C",
-			"Harmonic Rush",
-			"Harshil Kamdar",
-			"Heatbeat",
-			"Hemstock",
-			"Henry Moe",
-			"Hiroki Nagamine",
-			"Hiromori Aso",
-			"Hiroyuki ODA",
-			"Hit The Bass",
-			"HP Source",
-			"Iain M",
-			"Ilai",
-			"Impulse Wave",
-			"I.M.XPLODE",
-			"Indecent Noise",
-			"Inrayzex",
-			"Inversed",
-			"Jackob Rocksonn",
-			"Jackob Roenald",
-			"Jak Aggas",
-			"James Dymond",
-			"James Kitcher",
-			"James Pound",
-			"James Williams",
-			"Jase Thirlwall",
-			"Jimmy Chou",
-			"Jirah",
-			"Jody 6",
-			"Joe Fares",
-			"John 00 Fleming",
-			"John Askew",
-			"John Dopping",
-			"J.O.C.",
-			"John O'Callaghan",
-			"Joint Operations Centre",
-			"Jon O'Bir",
-			"Jonathan Carvajal",
-			"Jordan Tobias",
-			"Jordan Suckley",
-			"Jorn van Deynhoven",
-			"Joze Linecker",
-			"Kagehoshi",
-			"Karney",
-			"Kayan Code",
-			"K.E.K A",
-			"Ken-Gee",
-			"Ken Plus Ichiro",
-			"Kenny Palmer",
-			"Key4050 (O'Callaghan & Kearney)",
-			"Khairy Ahmed",
-			"Killerwatts",
-			"Kinetica",
-			"Kiyoi & Eky",
-			"Klaus Kaz",
-			"Kohta Imafuku",
-			"Kriess Guyte",
-			"Kvaii",
-			"Last Soldier",
-			"Lax1u57",
-			"Lee Walls",
-			"Leroy Moreno",
-			"Lewis Duggleby",
-			"Liam Melly",
-			"Liam Wilson",
-			"LightControl",
-			"Lightform",
-			"LinMou",
-			"Liquid Dream",
-			"Lost in Noise",
-			"Lostly",
-			"Luke Bond",
-			"Maarten de Jong",
-			"Madwave",
-			"Magnus",
-			"Manuel Le Saux",
-			"麻雀与雪",
-			"Maratone",
-			"Marie Vaunt",
-			"Mark L",
-			"Mark Sherry",
-			"MaRLo",
-			"Matty Ralph",
-			"Mekk V",
-			"Melvin Sheppard",
-			"Menno de Jong",
-			"Mental Asylum",
-			"Mercurial Virus",
-			"Metta & Glyde",
-			"Mhammed El Alami",
-			"Michael Kaelios",
-			"Midway",
-			"Miikka Leinonen",
-			"M.I.K.E. Push",
-			"Mike Zolaxx",
-			"Mike Sanders",
-			"Mind-X",
-			"Mirage",
-			"Miroslav Vrlik",
-			"Misja Helsloot",
-			"N-sKing",
-			"Neptune Project",
-			"NG Resonance",
-			"Nhato",
-			"Nicholson",
-			"Nick The Kid",
-			"Nico Cranxx",
-			"Nicolas Menicou",
-			"Nightflyers",
-			"Niko Zografos",
-			"Nikolauss",
-			"Nitrous Oxide",
-			"NO-SO",
-			"NoMosk",
-			"Obsidian",
-			"Omar Sherif",
-			"Onja Hard",
-			"onTune",
-			"Opt-In",
-			"Oussama Mlaouhia",
-			"Outsiders",
-			"Paipy",
-			"Pandora",
-			"Para X",
-			"Pathfinders",
-			"Paul Clark (CLK) (DJ CLK)",
-			"Paul Denton",
-			"Paul Miller",
-			"Paul Skelton",
-			"Paul van Dyk",
-			"Paul Webster",
-			"Peetu S",
-			"Perrelli & Mankoff",
-			"Pete Delete",
-			"Peter Santos",
-			"Peter Steele",
-			"Phazer",
-			"Philippe El Sisi",
-			"Photographer",
-			"Pink Pig",
-			"Pittarius Code",
-			"Plutian",
-			"Prime Mover",
-			"Principia",
-			"Project 8",
-			"Prototype",
-			"Proyal",
-			"PSYB3R",
-			"Pulse Code",
-			"R-TEC",
-			"Rafael Osmo",
-			"Ralphie B",
-			"RAM",
-			"Ramin Arab",
-			"Rated R",
-			"Raw Tech Audio",
-			"Relativ",
-			"R.E.L.O.A.D.",
-			"Rem-X",
-			"Rene Ablaze",
-			"Renegade System",
-			"ReOrder",
-			"Revolution 9",
-			"Rezwan Khan",
-			"Rhys Elliott",
-			"Richard Durand",
-			"Richard Tanselli",
-			"Rina Mirai",
-			"Rinaly",
-			"Rising Star",
-			"RJ Van Xetten",
-			"Robbie Seed",
-			"Robert Curtis (Rob Curtis)",
-			"Robert Nickson",
-			"Roger Shah",
-			"Roman Messer",
-			"Ronski Speed",
-			"Roy Aizawa",
-			"Ruslan Device",
-			"Ryan K",
-			"RYDEX",
-			"Ryoji Takahashi",
-			"Ryota Arai",
-			"Sam Jones",
-			"Sam Laxton",
-			"Sean Mathews",
-			"Sean Truby",
-			"Sean Tyas",
-			"Sean Whiting",
-			"Sebrof",
-			"Sector7",
-			"Selim Ozkaya",
-			"Shane Kinsella",
-			"Shirasawa",
-			"Sholan",
-			"Shugz",
-			"Signal Theory",
-			"Signum",
-			"Silvela",
-			"Simon Bostock",
-			"Simon Patterson",
-			"SkyPatrol",
-			"Smith & Brown",
-			"Snatt & Vix",
-			"Sneijder",
-			"Solar Movement",
-			"Solarstone",
-			"Solis",
-			"Sonic Element",
-			"Sonic Species",
-			"Sou Kanai",
-			"SounEmot",
-			"South of The Stars",
-			"Spanish Armada",
-			"Stacker",
-			"Standerwick",
-			"Starpicker",
-			"Stellanova",
-			"Stephen Kirkwood",
-			"Steve Allen",
-			"Steve Dekay",
-			"STNX",
-			"Stoneface & Terminal",
-			"Story of Oz",
-			"Storyteller",
-			"Sun Decade",
-			"Suncatcher",
-			"Sygma",
-			"Taishi",
-			"Talla 2XLC",
-			"Tangle",
-			"Tasadi",
-			"Tasso",
-			"Tau-Rine",
-			"Tempo Guisto",
-			"Terminal",
-			"Terrafusion",
-			"Thanac",
-			"The Cracken",
-			"The Digital Blonde",
-			"The Noble Six",
-			"Thomas Datt",
-			"Tim Verkruissen",
-			"Tom Colontonio",
-			"Tony Hang",
-			"TrancEye",
-			"Tranzvission",
-			"Trickster",
-			"Triode",
-			"Tristan D",
-			"Type 41",
-			"U-Mount",
-			"Uberjak'd",
-			"UCast",
-			"UDM",
-			"Vadim Bonkrashkov",
-			"Vermin Vibes",
-			"Vision X",
-			"Vlind",
-			"Wach",
-			"Waen",
-			"Waio",
-			"Will Atkinson",
-			"Will Rees",
-			"XiJaro & Pitch",
-			"XMeng",
-			"Yelow",
-			"Yoshi & Razner",
-			"Yuji Ono",
-			"Zach Zlov",
-			"Zirenz",
-			"Zyrus 7"
-		].map(($,A)=>[document.createTextNode(A?" | ":""),Object.assign(document.createElement("a"),{
-			href:"https://www.beatport.com/search?q="+encodeURIComponent($.replace(/ \(.+\)$/,"")).replaceAll("%20","+"),
-			innerText:$,
-			target:"_blank"
-		})]).flat())
-		document.querySelector("script").remove()
-	</script>
-	<div>Astrix | Burn in Noise | Dogzilla</div>
-</body>
+<h1>Trance Artists</h1>
+<div><script>
+	document.write([
+		"A & Z",
+		"AA Meeting",
+		"Abide",
+		"Abstract Vision",
+		"abSTrakt",
+		"Activa",
+		"Adam Ellis",
+		"Adam Morris",
+		"Adam Nickey",
+		"Adam Taylor",
+		"Adip Kiyoi",
+		"ADM",
+		"Ahmed Romel",
+		"Aimoon",
+		"Airdream",
+		"Aki Harunari",
+		"Alan Wyse",
+		"Alatheia",
+		"Alessandra Roncone",
+		"Alex Di Stefano",
+		"Alex M.O.R.P.H.",
+		"Alex Nomak",
+		"Alex Wright",
+		"AlexMo",
+		"Allan Berndtz",
+		"Allen & Envy",
+		"Allen Watts",
+		"Aly & Fila",
+		"Amir Hussain",
+		"Amos & Riot Night (Riot Night)",
+		"Andre Visior",
+		"Andres Sanchez",
+		"Andrew Manning",
+		"Angry Man",
+		"Araya",
+		"Architect",
+		"Arctic Moon",
+		"Arctic Ocean",
+		"A.R.D.I.",
+		"Ariams",
+		"Arja",
+		"Armin van Buuren",
+		"Arron Jones",
+		"Artifi",
+		"Ashley Smith",
+		"Asteroid",
+		"Astrofegs",
+		"Awii",
+		"Axel Walters",
+		"Ayda",
+		"Barely Sane",
+		"Ben Gold",
+		"Ben Nicky",
+		"Billy Gillies",
+		"Binary Ensemble",
+		"Bjorn Akesson",
+		"Black XS",
+		"Blashear",
+		"BluSkay",
+		"Bogdan Vix",
+		"BOND",
+		"Borealnight",
+		"Boski",
+		"Brainiac",
+		"Brian Flinn",
+		"Bryan Kearney",
+		"Calvin O'Commor",
+		"Cartel",
+		"Casey Rasch",
+		"Charlie Walker",
+		"Chris Connolly",
+		"Chris Element",
+		"Chris Lyf",
+		"Chris Metcalfe",
+		"Chris Schweizer",
+		"Christopher Corrigan",
+		"Christopher Lawrence",
+		"Ciaran McAuley",
+		"Claas Inc.",
+		"ClanEver",
+		"Claudiu Adam",
+		"CO1N",
+		"Codeswitch",
+		"Coke Montilla",
+		"Cold Blue",
+		"Cold Face",
+		"Conor Holohan",
+		"Corrado Baggieri",
+		"Costa Pantazis",
+		"Craig Connelly",
+		"Criostasis",
+		"Crisy",
+		"Crowd+Ctrl",
+		"Crubbixz",
+		"Curtis & Barnett",
+		"cYsmix",
+		"Dalmoori",
+		"Dan Kelly",
+		"Dan Stone",
+		"Daniel Skyver",
+		"Danny Eaton",
+		"Dark Fusion",
+		"Darkboy",
+		"Darkingz",
+		"Darren Porter",
+		"Dave Deen",
+		"Davey Asprey",
+		"David Elston",
+		"David Forbes",
+		"David Nimmo",
+		"David Rust",
+		"Db Mokk",
+		"Dennis Pedersen",
+		"Derek Ryan",
+		"DH",
+		"Dicken",
+		"DIM3NSION",
+		"Dima Krasnik",
+		"Discordia",
+		"DJ Frost",
+		"DJ T.H.",
+		"DJ Tranceair",
+		"Dmitriy Kuznetsov",
+		"Dominant Space",
+		"DreamLife",
+		"Driftmoon",
+		"Dstm",
+		"Dustin Husain",
+		"Ed Lynam",
+		"Eddie Bitar",
+		"Edgar Tapia",
+		"Elucidus",
+		"Emanuele Congeddu",
+		"Emiliano Pavon",
+		"Emj",
+		"Enrique Calvetty",
+		"Estigma",
+		"EverLight",
+		"Exis",
+		"Existence",
+		"Exolight",
+		"Exouler",
+		"Ezequiel Lovera",
+		"Facade",
+		"Factor B",
+		"Faders",
+		"Fady & Mina",
+		"Farnoodex",
+		"Faruk Sabanci",
+		"Fergie & Sadrian",
+		"Ferry Tayle",
+		"F.G. Noise",
+		"Fisical Project",
+		"Flynn",
+		"Flynn & Denton",
+		"Forza:Duo",
+		"Francis Way",
+		"Frank Waanders",
+		"Frank Watson",
+		"Fredge",
+		"Fright Nite",
+		"Gary Maguire",
+		"Gayax",
+		"George Boston",
+		"Giuseppe Ottaviani",
+		"Greg Downey",
+		"Greg Oakland",
+		"Haikal Ahmad",
+		"Haris C",
+		"Harmonic Rush",
+		"Harshil Kamdar",
+		"Heatbeat",
+		"Hemstock",
+		"Henry Moe",
+		"Hiroki Nagamine",
+		"Hiromori Aso",
+		"Hiroyuki ODA",
+		"Hit The Bass",
+		"HP Source",
+		"Iain M",
+		"Ilai",
+		"Impulse Wave",
+		"I.M.XPLODE",
+		"Indecent Noise",
+		"Inrayzex",
+		"Inversed",
+		"Jackob Rocksonn",
+		"Jackob Roenald",
+		"Jak Aggas",
+		"James Dymond",
+		"James Kitcher",
+		"James Pound",
+		"James Williams",
+		"Jase Thirlwall",
+		"Jimmy Chou",
+		"Jirah",
+		"Jody 6",
+		"Joe Fares",
+		"John 00 Fleming",
+		"John Askew",
+		"John Dopping",
+		"J.O.C.",
+		"John O'Callaghan",
+		"Joint Operations Centre",
+		"Jon O'Bir",
+		"Jonathan Carvajal",
+		"Jordan Tobias",
+		"Jordan Suckley",
+		"Jorn van Deynhoven",
+		"Joze Linecker",
+		"Kagehoshi",
+		"Karney",
+		"Kayan Code",
+		"K.E.K A",
+		"Ken-Gee",
+		"Ken Plus Ichiro",
+		"Kenny Palmer",
+		"Key4050 (O'Callaghan & Kearney)",
+		"Khairy Ahmed",
+		"Killerwatts",
+		"Kinetica",
+		"Kiyoi & Eky",
+		"Klaus Kaz",
+		"Kohta Imafuku",
+		"Kriess Guyte",
+		"Kvaii",
+		"Last Soldier",
+		"Lax1u57",
+		"Lee Walls",
+		"Leroy Moreno",
+		"Lewis Duggleby",
+		"Liam Melly",
+		"Liam Wilson",
+		"LightControl",
+		"Lightform",
+		"LinMou",
+		"Liquid Dream",
+		"Lost in Noise",
+		"Lostly",
+		"Luke Bond",
+		"Maarten de Jong",
+		"Madwave",
+		"Magnus",
+		"Manuel Le Saux",
+		"麻雀与雪",
+		"Maratone",
+		"Marie Vaunt",
+		"Mark L",
+		"Mark Sherry",
+		"MaRLo",
+		"Matty Ralph",
+		"Mekk V",
+		"Melvin Sheppard",
+		"Menno de Jong",
+		"Mental Asylum",
+		"Mercurial Virus",
+		"Metta & Glyde",
+		"Mhammed El Alami",
+		"Michael Kaelios",
+		"Midway",
+		"Miikka Leinonen",
+		"M.I.K.E. Push",
+		"Mike Zolaxx",
+		"Mike Sanders",
+		"Mind-X",
+		"Mirage",
+		"Miroslav Vrlik",
+		"Misja Helsloot",
+		"N-sKing",
+		"Neptune Project",
+		"NG Resonance",
+		"Nhato",
+		"Nicholson",
+		"Nick The Kid",
+		"Nico Cranxx",
+		"Nicolas Menicou",
+		"Nightflyers",
+		"Niko Zografos",
+		"Nikolauss",
+		"Nitrous Oxide",
+		"NO-SO",
+		"NoMosk",
+		"Obsidian",
+		"Omar Sherif",
+		"Onja Hard",
+		"onTune",
+		"Opt-In",
+		"Oussama Mlaouhia",
+		"Outside The Universe",
+		"Paipy",
+		"Pandora",
+		"Para X",
+		"Pathfinders",
+		"Paul Clark (CLK) (DJ CLK)",
+		"Paul Denton",
+		"Paul Miller",
+		"Paul Skelton",
+		"Paul van Dyk",
+		"Paul Webster",
+		"Peetu S",
+		"Perrelli & Mankoff",
+		"Pete Delete",
+		"Peter Santos",
+		"Peter Steele",
+		"Phazer",
+		"Philippe El Sisi",
+		"Photographer",
+		"Pink Pig",
+		"Pittarius Code",
+		"Plutian",
+		"Prime Mover",
+		"Principia",
+		"Project 8",
+		"Prototype",
+		"Proyal",
+		"PSYB3R",
+		"Pulse Code",
+		"R-TEC",
+		"Rafael Osmo",
+		"Ralphie B",
+		"RAM",
+		"Ramin Arab",
+		"Rated R",
+		"Raw Tech Audio",
+		"Relativ",
+		"R.E.L.O.A.D.",
+		"Rem-X",
+		"Rene Ablaze",
+		"Renegade System",
+		"ReOrder",
+		"Revolution 9",
+		"Rezwan Khan",
+		"Rhys Elliott",
+		"Richard Durand",
+		"Richard Tanselli",
+		"Rina Mirai",
+		"Rinaly",
+		"Rising Star",
+		"RJ Van Xetten",
+		"Robbie Seed",
+		"Robert Curtis (Rob Curtis)",
+		"Robert Nickson",
+		"Roger Shah",
+		"Roman Messer",
+		"Ronski Speed",
+		"Roy Aizawa",
+		"Ruslan Device",
+		"Ryan K",
+		"RYDEX",
+		"Ryoji Takahashi",
+		"Ryota Arai",
+		"Sam Jones",
+		"Sam Laxton",
+		"Sean Mathews",
+		"Sean Truby",
+		"Sean Tyas",
+		"Sean Whiting",
+		"Sebrof",
+		"Sector7",
+		"Selim Ozkaya",
+		"Shane Kinsella",
+		"Shirasawa",
+		"Sholan",
+		"Shugz",
+		"Signal Theory",
+		"Signum",
+		"Silvela",
+		"Simon Bostock",
+		"Simon Patterson",
+		"SkyPatrol",
+		"Smith & Brown",
+		"Snatt & Vix",
+		"Sneijder",
+		"Solar Movement",
+		"Solarstone",
+		"Solis",
+		"Sonic Element",
+		"Sonic Species",
+		"Sou Kanai",
+		"SounEmot",
+		"South of The Stars",
+		"Spanish Armada",
+		"Stacker",
+		"Standerwick",
+		"Starpicker",
+		"Stellanova",
+		"Stephen Kirkwood",
+		"Steve Allen",
+		"Steve Dekay",
+		"STNX",
+		"Stoneface & Terminal",
+		"Story of Oz",
+		"Storyteller",
+		"Sun Decade",
+		"Suncatcher",
+		"Sygma",
+		"Taishi",
+		"Talla 2XLC",
+		"Tangle",
+		"Tasadi",
+		"Tasso",
+		"Tau-Rine",
+		"Tempo Guisto",
+		"Terminal",
+		"Terrafusion",
+		"Thanac",
+		"The Cracken",
+		"The Digital Blonde",
+		"The Noble Six",
+		"Thomas Datt",
+		"Tim Verkruissen",
+		"Tom Colontonio",
+		"Tony Hang",
+		"TrancEye",
+		"Tranzvission",
+		"Trickster",
+		"Triode",
+		"Tristan D",
+		"Type 41",
+		"U-Mount",
+		"Uberjak'd",
+		"UCast",
+		"UDM",
+		"Vadim Bonkrashkov",
+		"Vermin Vibes",
+		"Vision X",
+		"Vlind",
+		"Wach",
+		"Waen",
+		"Waio",
+		"Will Atkinson",
+		"Will Rees",
+		"XiJaro & Pitch",
+		"XMeng",
+		"Yelow",
+		"Yoshi & Razner",
+		"Yuji Ono",
+		"Zach Zlov",
+		"Zirenz",
+		"Zyrus 7"
+	].map($=>Object.assign(document.createElement("a"),{
+		href:"https://www.beatport.com/search?q="+encodeURIComponent($.replace(/ \(.+\)$/,"")).replaceAll("%20","+"),
+		innerText:$,
+		target:"_blank"
+	}).outerHTML).join(" | "))
+	document.querySelector("script").remove()
+</script></div>
+<div>Astrix | Burn in Noise | Dogzilla</div>
